--- a/css/app.css
+++ b/css/app.css
@@ -86,3 +86,13 @@ body {
   border: 8px solid #000;
   margin: 0;
 }
+
+.card-img-top {
+  width: 100%;
+  height: 25vw;
+  object-fit: contain;
+}
+
+div > .col {
+  margin-bottom: 1rem;
+}
