--- a/css/app.css
+++ b/css/app.css
@@ -88,10 +88,10 @@ body {
 }
 
 .card-img-top {
-  padding-top: 1 em;
+  margin-top: 1em;
   width: 100%;
   height: 25vw;
-  object-fit: contain;
+  object-fit: scale-down;
 }
 
 div > .col {
